finished mean Tea need to come back and refactor with bootstrap

--- a/angularExercises/unitTwo/meanT/index.html
+++ b/angularExercises/unitTwo/meanT/index.html
@@ -14,7 +14,7 @@
   <body>
     <div ng-controller="main">
       <div class="guarantee">Guaranteed Awesome</div>
-     <h1 class="head" id="side">Welcom to Mean Mr. Tea</h1>
+     <h1 class="head" id="side">Welcome to Mean Mr. Tea</h1>
      <div id="mrT">
        <img id="pic" src="https://s-media-cache-ak0.pinimg.com/236x/c8/ff/20/c8ff2001fa19a5ba2a0c858d2578d6ed.jpg"/>
      </div>
